# bms-nlp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini  tox.ini
bms/: extract_point_names.py
data/bms-fierro/.dat/: content.bitfield  metadata.bitfield  metadata.key  metadata.signatures
data/bms-fierro/backup-10-sept-2019/: ACAD.csv  AMRL.csv  AOB4.csv  AQUA.csv  ARC.csv  ART.csv  ARTX.csv  BIXB.csv  BRIG.csv  C113.csv  CONT.csv  COWL.csv  CRUS.csv  CURR.csv  EPS.csv  FDPD.csv  GIEDT.csv  GILM.csv  HART.csv  HUNT.csv  JUNGER.csv  KERR.csv  LSA.csv  MSD.csv  OLS.csv  PINE.csv  PRB.csv  RECH.csv  RYER.csv  SCC.csv  SHIELDS.csv  SOCS.csv  SPRL.csv  STOR.csv  TAPS.csv  THOR.csv  TUPP.csv  VM2.csv  VM3A.csv  VM3B.csv  (+9 more)
data/bms-fierro/buildings/: b3_ibm.csv  ebu3b_ucsd.csv  site-03841cc4-3e4a-4100-be22-ecd1ee6af816.csv  site-1a7a1a7f-d496-40a7-b843-8c2b76c916bd.csv  site-1adf0cc4-f1fe-40bb-8d19-1e1e610de1d8.csv  site-1f77fe9a-b76d-46e9-af97-094b8a094254.csv  site-239fba85-4e4e-4cf1-9ffd-dc3c4efbaaa2.csv  site-3a86606f-9cc6-48a8-8e1a-fec5c2b576dc.csv  site-4b2c2c98-3fc7-4f97-a484-8de2eb020a1d.csv  site-68f31197-97d7-472d-8856-be27b1fb23b5.csv  site-7066abbb-2add-4abf-8aa4-1734d8cc2db0.csv  site-8e2f3874-71dc-4472-bcd7-6463679e3e37.csv  site-8f0def29-8d1e-49f1-a513-fb076d3f4ae0.csv  site-b257791e-20fd-43bb-a005-3de8181fc447.csv  site-be942417-1be0-45da-ad45-18be7a5359a8.csv  site-c249f9aa-d4a6-451c-8dd9-9df7592ac109.csv  site-d2151d2d-5d0d-4731-a8cb-4f198281dfd8.csv  site-e9fcefa3-2ba9-4090-8e90-c48ccd394553.csv  site-f10ab0c3-f0c8-4732-b48b-ac9d14cb3cf7.csv  site-fe81bdbf-db65-4f68-a615-0947e70e6b60.csv
data/bms-fierro/buildings/.dat/: content.key  content.signatures  content.tree  metadata.data  metadata.tree
data/bms-fierro/buildings/backup-10-sept-2019/: ASMUN.csv  Bainer.csv  CHEM.csv  CHEMX.csv  DH.csv  GHA_ICS.csv  KING.csv  KLEIBER.csv  LFH.csv  MADDY.csv  MATH.csv  MEYR.csv  (+10 more)
data/output/point-name-parser/: bms_vocabs.json
src/bms/: extract_point_names.py  generate_bms_vocab.py  label_point_tokens.py  tokenizer.py
tests/: test_dummy.py  test_extract_point_names.py  test_generate_bms_vocab.py  test_label_point_tokens.py
