[tool.poetry]
name = "bms"
version = "0.1.0"
description = "A benchmark to test how well NLP models understand BMS point names across different buildings."
authors = ["Rakebul Hasan"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
pydantic = "^2.11.5"
ipykernel = "^6.29.5"
langchain = "^0.3.26"
langgraph = "^0.5.1"
langchain-ollama = "^0.3.3"
langchain-community = "^0.3.27"
python-dotenv = "^1.1.1"
docarray = "^0.41.0"
faiss-cpu = "^1.11.0"
langchain-openai = "^0.3.27"
streamlit = "^1.46.1"
pypdf = "^5.9.0"
langchain-experimental = "^0.3.4"
fastapi = "^0.121.3"
authlib = "^1.6.5"
uvicorn = "^0.38.0"
itsdangerous = "^2.2.0"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
mypy = "^1.17.1"
black = "^25.1.0"
tox = "^4.28.4"
pytest = "^8.4.1"
pylint = "^3.3.8"
pytest-cov = "^6.2.1"
pre-commit = "^4.3.0"
notebook = "^7.4.5"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120   # match PyCharm default, or your team's preference
# force_single_line = false
# case_sensitive = true
# lines_between_sections = 1
# combine_as_imports = true

[tool.black]
# black only formats the code according to its rules—no analysis or error checking;
# it rewrites so your code looks consistent everywhere.
line-length = 120

[tool.pylint]
# pylint analyzes your code for problems and style issues;
# it does not reformat or change files, but reports issues for you to fix.
max-line-length = 120
# max-complexity sets the maximum allowed cyclomatic complexity for a function or method.
# Cyclomatic complexity measures how complicated code is (how many different paths through it).
# If a function exceeds this limit, Pylint will emit a warning (R1260: too-complex).
# max-complexity = 14
# disable = ["C0114", "C0115", "C0116"]
disable = "all"
enable = ["C0114", "C0115", "C0116"]

# [tool.mypy]
# ignore_missing_imports = true
# exclude = "(\\.venv|venv|\\.tox|site-packages|build|dist)"
# follow_imports = "skip"